--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "mongodb": "^3.5.9",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.1.2"
+    "axios": "^0.27.0",
+    "bootstrap": "^5.1.3",
+    "mongodb": "^4.5.0",
+    "next": "^12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "sass": "^1.51.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@vercel/node": "^1.7.1",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "@vercel/node": "^1.7.1"
+    "eslint-config-next": "12.0.7"
   }
 }
