--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "axios": "^0.27.0",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.8.2",
     "mongodb": "^4.5.0",
     "next": "^12.1.5",
     "react": "^18.0.0",
